// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiValueInput Should render correctly with values 1`] = `
<div
  data-component=""
>
  <TextField
    label="Input label"
    margin="normal"
    name="field1"
    onChange={[Function]}
    required={false}
    select={false}
    type="text"
    value=""
  />
  <MultiValueDisplay
    allowDelete={true}
    label="Selected Items"
    messageEmpty="No items selected"
    onDelete={[Function]}
    values={
      Array [
        "value 1",
        "value 2",
      ]
    }
  />
</div>
`;

exports[`MultiValueInput Should render correctly without values 1`] = `
<div
  data-component=""
>
  <TextField
    label="Input label"
    margin="normal"
    name="field1"
    onChange={[Function]}
    required={false}
    select={false}
    type="text"
    value=""
  />
  <MultiValueDisplay
    allowDelete={true}
    label="Selected Items"
    messageEmpty="No items selected"
    onDelete={[Function]}
    values={Array []}
  />
</div>
`;
